css/style.css
/* ... */
/*END of Filters in catalog.html*/

/*Products*/
.products-list {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
	margin-top: 0;
	margin-bottom: 6px;
	padding: 0;

	list-style: none;

}

.product-item {
	position: relative;

	width: 267px;
	margin: 0;
	padding: 0;
}

.product {
	position: relative;

	display: flex;
	flex-direction: column;
	width: 267px;
	margin: 0 auto;
	margin-bottom: 32px;

	padding-top: 7px;
	padding-right: 0;	
	padding-bottom: 0;
	padding-left: 0;

	text-align: center;
}

.product::after {
	content: '';

	position: absolute;
	top: 0;
	left: -13px;

	width: 293px;
	height: 405px;

	border-radius: 5px;

	z-index: 1;
}

.product:hover:after {
	background-color: rgba(255, 255, 255, .2);
	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .2);
}

.product-hit::after {
	content: '';

	position: absolute;
	top: 7px;
	left: 13px;

	width: 61px;
	height: 61px;

	background-image: url(../img/hit.svg);
	background-position: top left;
	background-repeat: no-repeat;

	z-index: 2;
}

.product-title {
	margin: 0;
	padding-top: 0;
	padding-right: 5px;
	padding-bottom: 0;
	padding-left: 5px;


	font-size: 16px;
	line-height: 21px;
	font-weight: 500;
	order: 1;
	z-index: 2;
}

.product-title a {
	color: rgb(255, 255, 255);
	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.product-title a:hover,
.product-title a:focus,
.product-title a:active {
	color: rgb(255, 188, 158);
	border-color: rgba(255, 188, 158, .3);
}

.product-price {
	position: relative;

	margin-top: -57px;
	margin-bottom: 21px;

	font-size: 45px;
	line-height: 45px;
	font-weight: 700;
	text-align: left;
	text-shadow: 1px 1px 3px rgba(49, 50, 53, .5);

	z-index: 2;
}

.product-price span {
	margin-left: 34px;

	font-size: 30px;
}

.product-price img {
	position: absolute;
	top: 5px;
	left: 81px;
}

.btn-product {
	position: absolute;
	bottom: -52px;
	left: 35px;

	padding-right: 15px;
	padding-left: 15px;

	z-index: 2;

	display: none;
}

.product:hover .btn-product,
.product:focus .btn-product {
	display: block;
}

.product:hover .product-img,
.product:focus .product-img {
	z-index: 2;
}

/*END of Products*/

/*Pagination*/
.pagination-list {
	margin-top: 50px;
	margin-bottom: 18px;
	padding: 0;
	padding-bottom: 30px;

	text-align: right;
	
	border-bottom: 1px solid rgba(255, 255, 255, .3);
	list-style: none;
}

.pagination-item {
	display: inline-block;
	margin: 0;
	padding-top: 2px;
	padding-bottom: 1px;
	padding-right: 9px;
	padding-left: 8px;

	font-size: 16px;
	line-height: 22px;
	font-weight: 500;
	color: rgb(255, 255, 255);

	border-radius: 50%;
}

.pagination-item:hover,
.pagination-item:focus {
	background-color: rgba(255, 255, 255, .2);
}

.pagination-item:active {
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);
}

.pagination-item-current,
.pagination-item-current:hover,
.pagination-item-current:focus,
.pagination-item-current:active {
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);
}

.pagination-item-next {
	margin-left: 10px;
}

.pagination-item-prev {
	margin-right: 10px;
	opacity: .2;
}

.pagination-item-prev svg {
	transform: rotate(180deg);
}
/*END of Pagination*/

/*Contacts*/
.contacts-map {
	position: relative;

	margin-bottom: 20px;
	margin-right: -27px;
	margin-left: -27px;
}

.map {
	position: relative;

	width: 1200px;
	height: 430px;

	background-color: rgb(255, 255, 255);
}

.map::after {
	content:'';

	position: absolute;
	top: 135px;
	left: 265px;
	width: 218px;
	height: 142px;
	background-image: url(../img/pin_with_shadow.png);
	background-position: 0 0;
	background-repeat: no-repeat;
}

.contacts-info {
	position: absolute;
	top: 63px;
	right: 27px;

	color: rgb(50, 50, 50);
	width: 250px;
	padding-top: 30px;
	padding-bottom: 35px;
	padding-right: 25px;
	padding-left: 25px;

	background-color: rgb(255, 255, 255);
	border-radius: 15px;
}

.contacts-description {
	margin: 0;

	font-size: 14px;
	line-height: 20px;
}

.contacts-data {
	margin-top: 0;
	margin-bottom: 19px;

	font-size: 18px;
	line-height: 24px;
	font-weight: 700;
}

.contacts-phone {
	font-size: 18px;
	line-height: 32px;
	font-weight: 700;
	color: rgb(50, 50, 50);
}

.btn-contact {
	margin-top: 20px;
}
/*END of Contacts*/

/*Footer*/
.main-footer {
	display: flex;
	justify-content: space-between;
	padding-bottom: 25px;
}

.social {
	display: flex;
	padding: 0;

	list-style: none;
}

.social-item {
	margin-right: 8px;
}

.social-icon {
	border: 2px solid rgba(255, 255, 255, .5);
	border-radius: 50%;
	opacity: .8;
}

.social-link:hover .social-icon,
.social-link:focus .social-icon,
.social-link:active .social-icon {
	border: 2px solid rgba(255, 255, 255, .7);
	outline: none;
	opacity: 1;
}

.social-link:active .social-icon {
	background-color: rgb(233, 233, 233);
	/*думаю, тут должен быть fill, так как меняется цвет иконки*/
}

.social-item:last-child {
	margin-right: 0;
}

.footer-menu {
	display: flex;
	margin-top: 12px;
	padding-bottom: 5px;
}

.footer-menu-list {
	margin-top: 0;
	margin-right: 14px;
	margin-bottom: 0;
  margin-left: 17px;
	padding: 0;

	list-style: none;
}

.footer-menu-item {
	position: relative;
	margin: 0;
}

.footer-menu-icon {
	position: absolute;
	top: 5px;
	left: -22px;

	width: 15px;
	height: 13px;
}

.footer-menu-link {
	font-size: 13px;
	line-height: 18px;
	color: rgb(255, 255, 255);

	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.footer-menu-link:hover,
.footer-menu-link:focus,
.footer-menu-link:active {
	color: rgb(255, 188, 158);

	border-color: rgba(255, 188, 158, .3);
	outline: none;
}

.footer-copyright {
	min-width: 190px;
}

.copyright-txt {
	margin: 0;
	padding: 0;

	font-size: 12px;
	line-height: 18px;
	color: rgb(255, 255, 255);
}

.copyright-link{
	color: rgb(255, 255, 255);

	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.copyright-link:hover,
.copyright-link:focus,
.copyright-link:active {
	color: rgb(255, 188, 158);

	border-color: rgba(255, 188, 158, .3);
	outline: none;
}
/* ... */

